Navbar correctly collapses now

--- a/src/assets/bootstrap/startbootstrap-business-casual-gh-pages/css/business-casual.css
+++ b/src/assets/bootstrap/startbootstrap-business-casual-gh-pages/css/business-casual.css
@@ -114,7 +114,7 @@ footer p {
     padding: 50px 0;
 }
 
-@media screen and (min-width:768px) {
+@media  (min-width:1380px) {
     .brand {
         display: inherit;
         margin: 0;
